plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'hello'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}


dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'org.springframework:spring-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'jakarta.mail:jakarta.mail-api:2.1.2'
	implementation 'org.eclipse.angus:jakarta.mail:2.0.2'
	testImplementation 'org.mockito:mockito-inline:4.11.0'
	implementation 'org.aspectj:aspectjweaver:1.9.21'

	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'  // JAXB API
	implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.2'        // JAXB 구현체
}

test {
	useJUnitPlatform()
	jvmArgs '-Djdk.instrument.traceUsage=true'
	jvmArgs '-XX:+EnableDynamicAgentLoading'
}

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}


